fix: list collapse on ipad

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -226,7 +226,7 @@ main {
 
   .list__container {
     display: flex;
-    height: 100%;
+    // height: 100%;
     flex-direction: column;
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
